Cycles doesn't work at all #45037

Closed
opened 2015-06-11 23:36:50 +02:00 by Billy Poirotte · 13 comments

System Information
Operating system and graphics card
Windows 7 64bits, ATI Mobility Radeon HD 5650
Blender Version
Broken: 2.75 RC1, bff8b5d
Worked: (optional)

Short description of error
When I want to able Cycles instead of the Blender Internal, blender crashes and closes. Impossible to able Cycles.
Exact steps for others to reproduce the error
Open the blender 2.75 RC1, click on the box in order to select the render engine, then click on Cycles and blender shuts off.

**System Information** Operating system and graphics card Windows 7 64bits, ATI Mobility Radeon HD 5650 **Blender Version** Broken: 2.75 RC1, bff8b5d Worked: (optional) **Short description of error** When I want to able Cycles instead of the Blender Internal, blender crashes and closes. Impossible to able Cycles. **Exact steps for others to reproduce the error** Open the blender 2.75 RC1, click on the box in order to select the render engine, then click on Cycles and blender shuts off.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Billy Poirotte self-assigned this 2015-06-11 23:36:50 +02:00
Author

Added subscriber: @Bil55

Added subscriber: @Bil55

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Same as other report, please make sure your drivers are up to date.

Same as other report, please make sure your drivers are up to date.
Thomas Dinges changed title from Cycyles doesn't work at all to Cycles doesn't work at all 2015-06-12 02:10:27 +02:00
Billy Poirotte was unassigned by Bastien Montagne 2015-06-12 10:01:39 +02:00
Author

My drivers are up to date. 2.74 works perfectly well, not 2.75 RC1

My drivers are up to date. 2.74 works perfectly well, not 2.75 RC1

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey: I suspect a OpenCL crash or so, maybe related to the old AMD GPU. Any idea? Not sure if something here is initialized on Engine Select already.

@Sergey: I suspect a OpenCL crash or so, maybe related to the old AMD GPU. Any idea? Not sure if something here is initialized on Engine Select already.

@Bil55, does the crash happen after simply selecting Cycles render engine or it only crashes when you start render?

Giving an output of blender run with --debug-cycles will be handy. Also please include system-info.txt generated by Help -> System Info.

@Bil55, does the crash happen after simply selecting Cycles render engine or it only crashes when you start render? Giving an output of blender run with `--debug-cycles` will be handy. Also please include `system-info.txt` generated by `Help -> System Info`.

This issue was referenced by ae3e37b899

This issue was referenced by ae3e37b899d68d12a7d40f09fe28d700243784d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Committed a potential fix for the issue and the system decided it's real fix..

I've poked buildbot to do a new testbuild, so once https://builder.blender.org/builders/win64_scons_vc2013/builds/977 is finished you can get a new build from builder.blender.org/download and check if it works for you or not.

Committed a potential fix for the issue and the system decided it's real fix.. I've poked buildbot to do a new testbuild, so once https://builder.blender.org/builders/win64_scons_vc2013/builds/977 is finished you can get a new build from builder.blender.org/download and check if it works for you or not.

This issue was referenced by 12e6bfe1d3

This issue was referenced by 12e6bfe1d3a15455aafc0fb81b2035721b6495b7

This issue was referenced by blender/cycles@a7fff7d84a

This issue was referenced by blender/cycles@a7fff7d84a8854c260f6f7e7511b438c228f154f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45037
No description provided.