Cycles: Fix wrong numbering of OpenCL devices when some of them are skipped

Skipped devices did not reflect in the device number, which might result in bad
array indices.

This might also resolve T45037, and need to be ported to a release branch.